--- a/style.css
+++ b/style.css
@@ -17,3 +17,27 @@ width: 100%;
 {
     margin: 20px;
 }
+
+.movie_head
+{
+    font-size: 20px;
+    padding: 6px 22px;
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
+
+.movie_head i
+{
+    float: right;
+}
+
+.movie_text span
+{
+    color: orange;
+}
+
+.travel_mainDiv img
+{
+    width: 100%;
+}
+
